--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,6 +13,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   RUST_VERSION: 1.67.1
+  HEAD_REF: {{ github.head_ref }}
 
 jobs:
   test:
@@ -47,7 +48,7 @@ jobs:
           echo "cache_loaded=false" >> $GITHUB_ENV
         fi
     - name: Git checkout (reattach HEAD to Head Ref)
-      run: git checkout "$(echo ${{ github.head_ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
+      run: run: git checkout "$(echo $HEAD_REF | sed -E 's|refs/[a-zA-Z]+/||')"
       if: github.head_ref != ''
     - name: Git checkout (reattach HEAD to Ref)
       run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
