--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -48,7 +48,7 @@ jobs:
           echo "cache_loaded=false" >> $GITHUB_ENV
         fi
     - name: Git checkout (reattach HEAD to Head Ref)
-      run: run: git checkout "$(echo $HEAD_REF | sed -E 's|refs/[a-zA-Z]+/||')"
+      run: git checkout "$(echo $HEAD_REF | sed -E 's|refs/[a-zA-Z]+/||')"
       if: github.head_ref != ''
     - name: Git checkout (reattach HEAD to Ref)
       run: git checkout "$(echo ${{ github.ref }} | sed -E 's|refs/[a-zA-Z]+/||')"
